# nano-og

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  MongoDB.md  README.md
assets/: main.css
src/: lib.rs  main.rs  pages.rs  pinata.rs  router.rs  server.rs  theme.rs
src/components/: common.rs  dashboard.rs  features.rs  hero.rs  navbar.rs  testimonial.rs
src/components/common/: logo.rs
src/components/dashboard/: chat.rs  navbar.rs  profile.rs  sidebar.rs
src/components/dashboard/chat/: panel.rs  sidebar.rs
src/components/dashboard/fields/: input.rs  number.rs  select.rs
src/components/dashboard/ogs/: create.rs  list.rs  read.rs
src/components/dashboard/profile/: edit.rs  view.rs
src/components/features/: grid.rs  item.rs
src/components/footer/: bottom.rs  links.rs  logo.rs
src/components/navbar/: btns.rs
src/components/testimonial/: author.rs
src/components/toast/: provider.rs
src/pages/: dashboard.rs  login.rs  og.rs  signup.rs
src/server/auth/: controller.rs  model.rs  request.rs  response.rs
src/server/conversation/: controller.rs  model.rs  request.rs
src/server/og/: controller.rs  model.rs  request.rs  response.rs
